tp-final/manifest/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
      tier: api-gateway
  template:
    metadata:
      labels:
        app: petclinic
        tier: api-gateway
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: app
          image: alexandreroman/spring-petclinic-k8s-api-gateway:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 1Gi
            limits:
              memory: 1Gi
          ports:
            - name: http
              containerPort: 8080
