tp-final/manifest/pdb-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdb-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.4.6
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /bitnami/mysql
      volumes:
        - name: mysql-persistent-storage
          emptyDir: {}
      imagePullSecrets:
      - name: secretdockeraccess
