tp-final/manifest/visits-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits
  labels:
    app: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
      tier: visits
  template:
    metadata:
      labels:
        app: petclinic
        tier: visits
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8084"
    spec:
      containers:
        - name: app
          image: alexandreroman/spring-petclinic-k8s-visits:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 1Gi
            limits:
              memory: 1Gi
          ports:
            - name: http
              containerPort: 8084
