tp-final/manifest/customers-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customers
spec:
  ports:
    - port: 8082
      protocol: TCP
      targetPort: 8082
  selector:
    app: petclinic
    tier: customers
