tp-final/manifest/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdb-mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
  clusterIP: None  # Pour permettre à l'application d'accéder via DNS stable (stateful-like)
