tp-final/manifest/vets-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vets
spec:
  ports:
    - port: 8083
      protocol: TCP
      targetPort: 8083
  selector:
    app: petclinic
    tier: vets
