tp-final/manifest/visits-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visits
spec:
  ports:
    - port: 8084
      protocol: TCP
      targetPort: 8084
  selector:
    app: petclinic
    tier: visits
